# Germen

./: .gitignore  AntiWatermark.py  Click.py  FormatReplace.py  FormatReplaceWithMacros.py  FormatwithLLM.py  GUI.py  GUI.py.bak  GetClickPlot.py  GetNovelImagePlot.py  ImageGrab.py  Install.bat  LICENSE  MacrosForReplace.bas  MainProgram.py  Memory.py  NovelImagePlot.py  OCR.MD  OpenAIOCR.py  PaddleOCR.py  PaddleOCRWithWebAPI.py  PaddleOCR_OLD.py  PaddleOCR_WebAPI.py  PressKeyboard.py  README.md  ReplaceWordsLists.csv  START.MD  Start.bat  TestProgram.bat  TextMerge.py  UpdateFormat.py  XYPlotData.npy  adb_controller.py  app_config.py  config.json  coordinates.py  frame_sources.py  log_utils.py  pyproject.toml  requirements.txt  (+1 more)
.github/workflows/: build-release.yml
FinalBooks/: example.txt
MergeText/: ExampleMergeBook.txt
NovelBook/: ExampleMergeBook.txt
NovelOCRText/: 2023-03-06-09-42-24.txt  2024-03-20-15-23-01.txt  a.txt  b.txt
data/: ClickPlot.json  ClickPlot.npy  ImagePlot.json  ImagePlot.npy  ReplaceWordsLists.csv  TextMerge.py
legacy/streamlit/: EditConfig.py  RemoteGrab.py
scripts/: pyinstaller_entry.py
src/germen/: __init__.py  __main__.py  anti_watermark.py  app_config.py  cli.py  click.py  coordinates.py  format_replace.py  format_with_llm.py  frame_sources.py  get_click_plot.py  get_novel_image_plot.py  gui.py  image_grab.py  log_utils.py  main_program.py  memory.py  openai_ocr.py  win_input.py  (+3 more)
tests/: mjpeg_smoke.py  test_cli_dispatch.py  test_frame_sources.py  test_main_program.py
web/: RemoteGrab.py.bak  main.py  select_area.html  test.py
(+2 files in other folders)
