[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "germen"
version = "0.2.4"
description = "Personal Android novel OCR extraction tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pillow",
    "openai>=1.76.0",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
germen = "germen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
